change in froala editor should notify when changed. strange bug prevents it.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -5,7 +5,7 @@
   "members": {
     "members": "חברים",
     "new": "הוסף חבר",
-    "filter": "חפש",
+    "filter": "הקלד שם פרטי, שם משפחה או כינוי",
     "clear": "נקה",
     "family-connections": "קשרי משפחה",
     "life-summary": "קיצור תולדות החיים",
