--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -56,6 +56,9 @@
     "terms": "מונחים",
     "terms-lexicon": "מילון מונחים"
   },
+  "multi-selection": {
+    "filter": "הקש שם נושא"
+  },
   "parents": "הורים",
   "siblings": "אחים/אחיות",
   "wife": "בת זוג",
