--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -61,7 +61,8 @@
     "to-date": "צולם לפני",
     "uploaded-by-me": "הועלו על ידי",
     "uploaded-by-users": "הועלו על ידי משתמשים",
-    "uploaded-by-anyone": "כל התמונות"
+    "uploaded-by-anyone": "כל התמונות",
+    "enter-date": "תאריך או שנה"
   },
   "terms": {
     "terms": "מונחים",
