--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -68,7 +68,8 @@
     "upload-files": "העלאת תמונות",
     "select-photos": "בחר תמונות",
     "save": "שלח",
-    "photos-were-selected": " - תמונות שנבחרו"
+    "photos-were-selected": " - תמונות שנבחרו",
+    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה על ידי שיתוף עם הכתובת "
   },
   "terms": {
     "terms": "מונחים",
