--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -65,11 +65,12 @@
     "upload-in-progress": "...התמונות נשלחות לשרת",
     "photos-uploaded": " - תמונות שהועלו בהצלחה",
     "photos-duplicate": " - תמונות שכבר הועלו בעבר",
+    "failed": " - לא נקלטו במערכת",
     "upload-files": "העלאת תמונות",
     "select-photos": "בחר תמונות",
     "save": "שלח",
     "photos-were-selected": " - תמונות שנבחרו",
-    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה על ידי שיתוף עם הכתובת "
+    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת "
   },
   "terms": {
     "terms": "מונחים",
