--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -30,7 +30,8 @@
     "father": "אבא",
     "mother": "אמא",
     "make-profile-photo": "קבע כתמונת הפרופיל",
-    "new-member": "חבר חדש"
+    "new-member": "חבר חדש",
+    "more-stories": "עוד ספורים"
   },
   "user": {
     "login": "התחבר",
