--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -31,7 +31,7 @@
     "mother": "אמא",
     "make-profile-photo": "קבע כתמונת הפרופיל",
     "new-member": "חבר חדש",
-    "more-stories": "עוד ספורים"
+    "more-stories": "ספורים קשורים"
   },
   "user": {
     "login": "התחבר",
