push previously identified members to head of list

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -31,7 +31,8 @@
     "mother": "אמא",
     "make-profile-photo": "קבע כתמונת הפרופיל",
     "new-member": "חבר חדש",
-    "more-stories": "ספורים קשורים"
+    "more-stories": "ספורים קשורים",
+    "set-as-profile-photo": "קבע כתמונת פרופיל"
   },
   "user": {
     "login": "התחבר",
