--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -32,7 +32,8 @@
     "make-profile-photo": "קבע כתמונת הפרופיל",
     "new-member": "חבר חדש",
     "more-stories": "ספורים קשורים",
-    "set-as-profile-photo": "קבע כתמונת פרופיל"
+    "set-as-profile-photo": "קבע כתמונת פרופיל",
+    "strange-bug": "בג מוזר"
   },
   "user": {
     "login": "התחבר",
