zoom and edit story

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -3,7 +3,8 @@
   "gbstories": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
   "stories": {
     "stories": "ספורים",
-    "place-stories": "ספורי המקום"
+    "place-stories": "ספורי המקום",
+    "zoom": "לקריאה בחלון גדול"
   },
   "members": {
     "members": "חברים",
