--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -76,7 +76,9 @@
     "select-photos": "בחר תמונות",
     "save": "שלח",
     "photos-were-selected": " - תמונות שנבחרו",
-    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת "
+    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
+    "more": "יותר תמונות בשורה",
+    "less": "פחות תמונות בשורה"
   },
   "terms": {
     "terms": "מונחים",
