--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -6,7 +6,9 @@
     "place-stories": "ספורי המקום",
     "zoom": "לקריאה בחלון גדול",
     "edit": "לעריכת הסיפור",
-    "enter-story-name": "תן כותרת לסיפור"
+    "enter-story-name": "תן כותרת לסיפור",
+    "cancel": "בטל",
+    "save": "שמור"
   },
   "members": {
     "members": "חברים",
