--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -16,7 +16,7 @@
     "filter": "הקלד שם פרטי, שם משפחה או כינוי",
     "clear": "נקה",
     "family-connections": "קשרי משפחה",
-    "life-summary": "קיצור תולדות החיים",
+    "life-summary": " קיצור תולדות החיים של",
     "editing-member": "עריכת פרטי החבר",
     "first-name": "שם פרטי",
     "last-name": "שם משפחה",
