--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -1,5 +1,18 @@
 {
-  "home": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
+  "home": {
+    "home": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
+    "videos": "קטעי וידאו",
+    "sample-stories": "ספורים לדוגמא",
+    "messages": "לוח מודעות",
+    "full-collection": "לאוסף המלא",
+    "male-member-of-the-day": "חבר היום",
+    "female-member-of-the-day": "חברת היום",
+    "male-was-born-in": "נולד ב",
+    "female-was-born-in": "נולדה ב",
+    "male-died-in": "נפטר ב-",
+    "female-died-in": "נפטרה ב-",
+    "to-the-page-of": "לדף החבר של "
+  },
   "gbstories": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
   "stories": {
     "stories": "ספורים",
