--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -2,7 +2,7 @@
   "home": {
     "home": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
     "videos": "קטעי וידאו",
-    "sample-stories": "ספורים לדוגמא",
+    "sample-stories": "מבחר ספורים",
     "messages": "לוח מודעות",
     "full-collection": "לאוסף המלא",
     "male-member-of-the-day": "חבר היום",
