--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -11,7 +11,8 @@
     "female-was-born-in": "נולדה ב",
     "male-died-in": "נפטר ב-",
     "female-died-in": "נפטרה ב-",
-    "to-the-page-of": "לדף החבר של "
+    "to-the-page-of": "לדף החבר של ",
+    "new-message": "הודעה חדשה"
   },
   "gbstories": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
   "stories": {
