--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -22,6 +22,7 @@
     "edit": "לעריכת הסיפור",
     "enter-story-name": "תן כותרת לסיפור",
     "cancel": "בטל",
+    "filter": "חפש מילים בתוך הספורים",
     "save": "שמור"
   },
   "members": {
