--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -23,7 +23,8 @@
     "enter-story-name": "תן כותרת לסיפור",
     "cancel": "בטל",
     "filter": "חפש מילים בתוך הספורים",
-    "save": "שמור"
+    "save": "שמור",
+    "to-the-full-story": "לסיפור המלא"
   },
   "members": {
     "members": "חברים",
