wip. story-detail page.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -24,7 +24,8 @@
     "cancel": "בטל",
     "filter": "חפש מילים בתוך הספורים",
     "save": "שמור",
-    "to-the-full-story": "לסיפור המלא"
+    "to-the-full-story": "לסיפור המלא",
+    "associated-members": "חברים הקשורים לסיפור"
   },
   "members": {
     "members": "חברים",
