--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -25,7 +25,8 @@
     "filter": "חפש מילים בתוך הספורים",
     "save": "שמור",
     "to-the-full-story": "לסיפור המלא",
-    "associated-members": "חברים הקשורים לסיפור"
+    "associated-members": "חברים הקשורים לסיפור",
+    "languages": "בחר שפה"
   },
   "members": {
     "members": "חברים",
