--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -22,11 +22,23 @@
     "edit": "לעריכת הסיפור",
     "enter-story-name": "תן כותרת לסיפור",
     "cancel": "בטל",
-    "filter": "חפש מילים בתוך הספורים",
+    "filter": "חפש בשמות הספורים והמחברים",
     "save": "שמור",
     "to-the-full-story": "לסיפור המלא",
     "associated-members": "חברים הקשורים לסיפור",
-    "languages": "בחר שפה"
+    "languages": "בחר שפה",
+    "arabic": "ערבית",
+    "german": "גרמנית",
+    "greek": "יוונית",
+    "english": "אנגלית",
+    "spanish": "ספרדית",
+    "hungarian": "הונגרית",
+    "italian": "איטלקית",
+    "hebrew": "עברית",
+    "dutch": "הולנדית",
+    "romanian": "רומנית",
+    "russian": "רוסית",
+    "UNKNOWN": "לא מזוהה"
   },
   "members": {
     "members": "חברים",
