--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -26,6 +26,7 @@
     "save": "שמור",
     "to-the-full-story": "לסיפור המלא",
     "associated-members": "חברים הקשורים לסיפור",
+    "word-index": "חפש מילים בתוכן הספורים",
     "languages": "בחר שפה",
     "arabic": "ערבית",
     "german": "גרמנית",
