--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -39,7 +39,8 @@
     "dutch": "הולנדית",
     "romanian": "רומנית",
     "russian": "רוסית",
-    "UNKNOWN": "לא מזוהה"
+    "UNKNOWN": "לא מזוהה",
+    "new": "הוסף סיפור חדש"
   },
   "members": {
     "members": "חברים",
