--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -40,7 +40,9 @@
     "romanian": "רומנית",
     "russian": "רוסית",
     "UNKNOWN": "לא מזוהה",
-    "new": "הוסף סיפור חדש"
+    "new": "הוסף סיפור חדש",
+    "matching-stories": "ספורים כוללים את המילים שנבחרו",
+    "no-story": "לתמונה זו לא נמצא ספור"
   },
   "members": {
     "members": "חברים",
