--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -113,8 +113,8 @@
     "save": "שלח",
     "photos-were-selected": " - תמונות שנבחרו",
     "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
-    "more": "יותר תמונות בשורה",
-    "less": "פחות תמונות בשורה"
+    "more": "יותר",
+    "less": "פחות"
   },
   "terms": {
     "terms": "מונחים",
