--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -42,7 +42,12 @@
     "UNKNOWN": "לא מזוהה",
     "new": "הוסף סיפור חדש",
     "matching-stories": "ספורים כוללים את המילים שנבחרו",
-    "no-story": "לתמונה זו לא נמצא ספור"
+    "no-story": "לתמונה זו לא נמצא ספור",
+    "life-stories": "ספורי חיים",
+    "events": "ארועים",
+    "photos": "תמונות",
+    "terms": "מונחים",
+    "all-types": "כל סוגי הספורים"
   },
   "members": {
     "members": "חברים",
