--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -101,13 +101,16 @@
     "uploaded-any-time": "תמונות שהועלו בזמן כלשהו",
     "uploaded-today": "תמונות שהועלו היום",
     "uploaded-this-week": "תמונות שהועלו השבוע",
+    "uploaded-this-month": "תמונות שהועלו החודש",
+    "uploaded-this-quarter": "תמונות שהועלו ברבעון זה",
+    "uploaded-this-year": "תמונות שהועלו השנה",
     "click-topic": "הקלד נושא והקלק כשיופיע",
     "click-photographer": "הקלד צלם והקלק כשיופיע",
     "from-date": "צולם אחרי",
     "to-date": "צולם לפני",
     "uploaded-by-me": "הועלו על ידי",
     "uploaded-by-users": "הועלו על ידי משתמשים",
-    "uploaded-by-anyone": "כל התמונות",
+    "uploaded-by-anyone": "תמונות ממקור כלשהו",
     "enter-date": "תאריך או שנה",
     "upload-in-progress": "...התמונות נשלחות לשרת",
     "photos-uploaded": " - תמונות שהועלו בהצלחה",
