--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -47,7 +47,8 @@
     "events": "ארועים",
     "photos": "תמונות",
     "terms": "מונחים",
-    "all-types": "כל סוגי הספורים"
+    "all-types": "כל סוגי הספורים",
+    "story-types": "סוג הספורים"
   },
   "members": {
     "members": "חברים",
