remove member. web socket.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -72,6 +72,7 @@
     "cancel": "בטל את השינויים",
     "gender": "מין",
     "delete-member": "הסר מרשימת החברים",
+    "confirm-delete": "בטוח שרוצה למחוק את החבר?",
     "father": "אבא",
     "mother": "אמא",
     "make-profile-photo": "קבע כתמונת הפרופיל",
