--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -136,7 +136,7 @@
     "vis-never": "לא ניתן לתצוגה!",
     "vis-not-ready": "לא מוכן עדיין",
     "vis-visible": "לתצוגה",
-    "vis-high": "מועדף לתצוגה"
+    "vis-high": "בעדיפות"
   },
   "parents": "הורים",
   "siblings": "אחים/אחיות",
