wip - selecting stories.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -48,7 +48,8 @@
     "photos": "תמונות",
     "terms": "מונחים",
     "all-types": "כל סוגי הספורים",
-    "story-types": "סוג הספורים"
+    "story-types": "סוג הספורים",
+    "checking": "סימון הסיפור"
   },
   "members": {
     "members": "חברים",
