wip on tags editing

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -127,7 +127,9 @@
     "photos-were-selected": " - תמונות שנבחרו",
     "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
     "more": "יותר",
-    "less": "פחות"
+    "less": "פחות",
+    "save-merges": "שמור את המיזוגים",
+    "apply-to-selected": "ישם לתמונות שנבחרו"
   },
   "terms": {
     "terms": "מונחים",
