--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -129,7 +129,8 @@
     "more": "יותר",
     "less": "פחות",
     "save-merges": "שמור את המיזוגים",
-    "apply-to-selected": "ישם לתמונות שנבחרו"
+    "apply-to-selected": "ישם לתמונות שנבחרו",
+    "download": "הורדת תמונות"
   },
   "terms": {
     "terms": "מונחים",
