--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -49,6 +49,7 @@
     "terms": "מונחים",
     "all-types": "כל סוגי הספורים",
     "story-types": "סוג הספורים",
+    "apply-to-selected": "תייג את הספורים שנבחרו",
     "checking": "סימון הסיפור"
   },
   "members": {
@@ -129,7 +130,7 @@
     "more": "יותר",
     "less": "פחות",
     "save-merges": "שמור את המיזוגים",
-    "apply-to-selected": "ישם לתמונות שנבחרו",
+    "apply-to-selected": "תייג את התמונות שנבחרו",
     "download": "הורדת תמונות"
   },
   "terms": {
