--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -50,7 +50,9 @@
     "all-types": "כל סוגי הספורים",
     "story-types": "סוג הספורים",
     "apply-to-selected": "תייג את הספורים שנבחרו",
-    "checking": "סימון הסיפור"
+    "checking": "סימון הסיפור",
+    "older-links": "קישורים לאתר הישן",
+    "undelete": "שחזור ספורים שנמחקו"
   },
   "members": {
     "members": "חברים",
