--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -133,7 +133,9 @@
     "less": "פחות",
     "save-merges": "שמור את המיזוגים",
     "apply-to-selected": "תייג את התמונות שנבחרו",
-    "download": "הורדת תמונות"
+    "download": "הורדת תמונות",
+    "done-checking": "סיים את שלב הבחירה",
+    "apply-to-checked": "תייג את התמונות שנבחרו"
   },
   "terms": {
     "terms": "מונחים",
