--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -113,7 +113,7 @@
     "uploaded-this-quarter": "תמונות שהועלו ברבעון זה",
     "uploaded-this-year": "תמונות שהועלו השנה",
     "click-topic": "הקלד תג והקלק עליו כשיופיע",
-    "click-photographer": "הקלד צלם והקלק כשיופיע",
+    "click-photographer": "הקלד שם צלם והקלק עליו כשיופיע",
     "from-date": "צולם אחרי",
     "to-date": "צולם לפני",
     "uploaded-by-me": "הועלו על ידי",
