--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -139,6 +139,9 @@
     "download": "הורדת תמונות",
     "done-selecting": "סיים את שלב הבחירה"
   },
+  "videos": {
+    "videos": "וידאו"
+  },
   "terms": {
     "terms": "מונחים",
     "terms-lexicon": "מילון מונחים"
