--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -143,7 +143,7 @@
     "done-selecting": "סיים את שלב הבחירה"
   },
   "videos": {
-    "videos": "וידאו"
+    "videos": "סרטונים"
   },
   "terms": {
     "terms": "מונחים",
