--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -41,6 +41,7 @@
     "russian": "רוסית",
     "UNKNOWN": "לא מזוהה",
     "new": "הוסף סיפור חדש",
+    "new-story": "סיפור חדש",
     "matching-stories": "ספורים כוללים את המילים שנבחרו",
     "no-story": "לתמונה זו לא נמצא ספור",
     "life-stories": "ספורי חיים",
@@ -147,7 +148,9 @@
   },
   "terms": {
     "terms": "מונחים",
-    "terms-lexicon": "מילון מונחים"
+    "terms-lexicon": "מילון מונחים",
+    "new": "מונח חדש",
+    "filter": "חפוש מהיר בשמות המונחים"
   },
   "consts": {
     "vis-never": "לא ניתן לתצוגה!",
