--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -107,7 +107,10 @@
     "manage-users": "ניהול משתמשים",
     "can-edit": "אפשר לערוך",
     "upload-files": "העלאת תמונות",
-    "login-failed": "טעות בכתובת האימייל או בסיסמה"
+    "login-failed": "טעות בכתובת האימייל או בסיסמה",
+    "email-already-exists": "אימייל זה כבר רשום במערכת",
+    "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
+    "register-done": "הבנתי"
   },
   "photos": {
     "photos": "תמונות",
