--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -107,7 +107,10 @@
     "manage-users": "ניהול משתמשים",
     "can-edit": "אפשר לערוך",
     "upload-files": "העלאת תמונות",
-    "login-failed": "טעות בכתובת האימייל או בסיסמה",
+    "cant-send-email": "כתובת דואל לא תקינה",
+    "wrong-password": "טעות בסיסמה",
+    "user-not-registered": "אינך רשום עדיין",
+    "incomplete-registration": "ההרשמה טרם הושלמה",
     "email-already-exists": "אימייל זה כבר רשום במערכת",
     "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
     "register-done": "הבנתי"
