--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -110,6 +110,7 @@
     "cant-send-email": "כתובת דואל לא תקינה",
     "wrong-password": "טעות בסיסמה",
     "user-not-registered": "אינך רשום עדיין",
+    "cant-send-mail": "כתובת דואל לא תקינה",
     "incomplete-registration": "ההרשמה טרם הושלמה",
     "email-already-exists": "אימייל זה כבר רשום במערכת",
     "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
