photo info. more.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -119,6 +119,7 @@
   "photos": {
     "photos": "תמונות",
     "photographers": "צלמים",
+    "photographer": "הצלם",
     "photos-store": "מאגר התמונות",
     "filter": "חפש בכותרות התמונות",
     "uploaded-any-time": "תמונות שהועלו בזמן כלשהו",
