copy to clipboad. more.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -179,5 +179,6 @@
   "husband": "בן זוג",
   "husbands": "בני זוג",
   "children": "ילדים",
-  "topics": "נושאים"
+  "topics": "נושאים",
+  "copy-to-clipboard": "העתק"
 }
