timeline. started chatrooms.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -180,5 +180,6 @@
   "husbands": "בני זוג",
   "children": "ילדים",
   "topics": "נושאים",
-  "copy-to-clipboard": "העתק"
+  "copy-to-clipboard": "העתק",
+  "select-years-range": "בחר טווח שנים להצגה  "
 }
