--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -155,7 +155,12 @@
     "edit-new-story": "כתוב את סיפורה של התמונה",
     "new-story-content": "לתמונה זו אין עדיין סיפור",
     "highlight-all": "האר את כל הפרצופים המזוהים",
-    "jump-to-story-page": "עבור לדף התמונה"
+    "jump-to-story-page": "עבור לדף התמונה",
+    "dated-or-not": "תמונות מתוארכות ובלתי מתוארכות",
+    "dated": "תמונות מתוארכות בלבד",
+    "undated": "תמונות בלתי מתוארכות בלבד",
+    "drag-me": "גרור אותי ימינה ושמאלה",
+    "unknown": "בלתי ידוע"
   },
   "videos": {
     "videos": "סרטונים"
