--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -115,7 +115,8 @@
     "email-already-exists": "אימייל זה כבר רשום במערכת",
     "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
     "register-done": "הבנתי",
-    "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה"
+    "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
+    "chat-rooms": "קבוצות דיון"
   },
   "photos": {
     "photos": "תמונות",
