--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -65,7 +65,8 @@
     "uploaded-this-week": "ספורים שהועלו השבוע",
     "uploaded-this-month": "ספורים שהועלו החודש",
     "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
-    "uploaded-this-year": "ספורים שהועלו השנה"
+    "uploaded-this-year": "ספורים שהועלו השנה",
+    "update-associated-members": "עדכן"
   },
   "members": {
     "members": "חברים",
