start font size control

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -208,5 +208,7 @@
   "topics": "נושאים",
   "copy-to-clipboard": "העתק",
   "timeline": "ציר הזמן",
-  "select-years-range": "סמן את התקופה הרצויה"
+  "select-years-range": "סמן את התקופה הרצויה",
+  "abcde": "אבגדה",
+  "a": "א"
 }
