more help. back button.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -133,7 +133,8 @@
     "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
     "register-done": "הבנתי",
     "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
-    "chat-rooms": "קבוצות דיון"
+    "chat-rooms": "קבוצות דיון",
+    "font-size": "בחרו את גודל האותיות"
   },
   "photos": {
     "photos": "תמונות",
@@ -200,6 +201,7 @@
     "why-clip": "קבץ את כל התגים שאינם מקובצים",
     "why-unclip": "פרק מחדש את קבוצת התגים"
   },
+  "go-back": "חזור",
   "parents": "הורים",
   "siblings": "אחים/אחיות",
   "wife": "בת זוג",
