--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -66,7 +66,8 @@
     "uploaded-this-month": "ספורים שהועלו החודש",
     "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
     "uploaded-this-year": "ספורים שהועלו השנה",
-    "update-associated-members": "עדכן"
+    "update-associated-members": "עדכן חברים",
+    "update-associated-photos": "עדכן תמונות"
   },
   "members": {
     "members": "חברים",
@@ -214,5 +215,6 @@
   "timeline": "ציר הזמן",
   "select-years-range": "סמן את התקופה הרצויה",
   "abcde": "אבגדה",
-  "a": "א"
+  "a": "א",
+  "update": "עדכן"
 }
