sort members by first->last name

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -101,7 +101,8 @@
     "visibility": "נִרְאוּת",
     "strange-bug": "בג מוזר",
     "random-order": "ללא סדר מיוחד",
-    "by-name": "לפי השם",
+    "by-last-name": "לפי שם המשפחה",
+    "by-first-name": "לפי השם הפרטי",
     "by-age-young-first":  "צעירים תחילה",
     "by-age-old-first": "מבוגרים תחילה",
     "member-groups": "קבוצות חברים",
