script to merge continued stories

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -67,7 +67,8 @@
     "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
     "uploaded-this-year": "ספורים שהועלו השנה",
     "update-associated-members": "עדכן חברים",
-    "update-associated-photos": "עדכן תמונות"
+    "update-associated-photos": "עדכן תמונות",
+    "consolidate-selected-story": "מזג לסיפור אחד"
   },
   "members": {
     "members": "חברים",
