--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -125,7 +125,8 @@
     "first-name": "שם פרטי",
     "last-name": "שם משפחה",
     "manage-users": "ניהול משתמשים",
-    "can-edit": "אפשר לערוך",
+    "can-edit": "הכנס למצב עריכה",
+    "no-edit": "חזור לצפייה בלבד",
     "upload-files": "העלאת תמונות",
     "cant-send-email": "כתובת דואל לא תקינה",
     "wrong-password": "טעות בסיסמה",
