scrollbar visibility. upload from photos page.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -184,7 +184,8 @@
     "dated": "תמונות מתוארכות בלבד",
     "undated": "תמונות בלתי מתוארכות בלבד",
     "drag-me": "גרור אותי ימינה ושמאלה",
-    "unknown": "בלתי ידוע"
+    "unknown": "בלתי ידוע",
+    "upload": "הוסף תמונות"
   },
   "videos": {
     "videos": "סרטונים"
