highlight search words

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -68,7 +68,8 @@
     "uploaded-this-year": "ספורים שהועלו השנה",
     "update-associated-members": "עדכן חברים",
     "update-associated-photos": "עדכן תמונות",
-    "consolidate-selected-story": "מזג לסיפור אחד"
+    "consolidate-selected-story": "מזג לסיפור אחד",
+    "highlight-on": "הדגש מילות חיפוש"
   },
   "members": {
     "members": "חברים",
