highlight search words

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -69,7 +69,7 @@
     "update-associated-members": "עדכן חברים",
     "update-associated-photos": "עדכן תמונות",
     "consolidate-selected-story": "מזג לסיפור אחד",
-    "highlight-on": "הדגש מילות חיפוש"
+    "highlight-on": "הפעל/הפסק הדגשת מילות החיפוש"
   },
   "members": {
     "members": "חברים",
