--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -113,7 +113,8 @@
     "load-member-group": "טען קבוצת חברים",
     "clear-member-group": "נקה את הקבוצה שנבחרה",
     "story": "בחירת חברים הקשורים לסיפור",
-    "back-to-story": "חזרה לדף הספור"
+    "back-to-story": "חזרה לדף הספור",
+    "to-story-page": "לדף הספור"
   },
   "user": {
     "login": "התחבר",
