--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -114,7 +114,9 @@
     "clear-member-group": "נקה את הקבוצה שנבחרה",
     "story": "בחירת חברים הקשורים לסיפור",
     "back-to-story": "חזרה לדף הספור",
-    "to-story-page": "לדף הספור"
+    "to-story-page": "לדף הספור",
+    "family-only": "משפחה בלבד",
+    "all-members": "משפחה וחברים"
   },
   "user": {
     "login": "התחבר",
