family connections polished. enable prefixing story url with host.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -115,8 +115,8 @@
     "story": "בחירת חברים הקשורים לסיפור",
     "back-to-story": "חזרה לדף הספור",
     "to-story-page": "לדף הספור",
-    "family-only": "משפחה בלבד",
-    "all-members": "משפחה וחברים"
+    "family-only": "קשרי משפחה",
+    "all-members": "כל החברים"
   },
   "user": {
     "login": "התחבר",
