story source separated from creator/updater. some style issues.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -21,6 +21,7 @@
     "zoom": "לקריאה בחלון גדול",
     "edit": "לעריכת הסיפור",
     "enter-story-name": "תן כותרת לסיפור",
+    "enter-story-source": "מקור הסיפור",
     "cancel": "בטל",
     "filter": "חפוש מהיר בשמות הספורים והמחברים",
     "save": "שמור",
