--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,236 +1,236 @@
 {
   "home": {
     "home": "Givat-Brenner Stories",
-    "videos": "קטעי וידאו",
-    "sample-stories": "מבחר ספורים",
-    "messages": "לוח מודעות",
-    "full-collection": "לאוסף המלא",
-    "male-member-of-the-day": "חבר היום",
-    "female-member-of-the-day": "חברת היום",
-    "male-was-born-in": "נולד ב",
-    "female-was-born-in": "נולדה ב",
-    "male-died-in": "נפטר ב-",
-    "female-died-in": "נפטרה ב-",
-    "to-the-page-of": "לדף החבר של ",
-    "new-message": "הודעה חדשה"
+    "videos": "Video Clips",
+    "sample-stories": "Selected Stories",
+    "messages": "Billboard",
+    "full-collection": "The Full Collection",
+    "male-member-of-the-day": "Today's Member",
+    "female-member-of-the-day": "Today's Member",
+    "male-was-born-in": "Born in ",
+    "female-was-born-in": "Born in",
+    "male-died-in": "Died in ",
+    "female-died-in": "Died in",
+    "to-the-page-of": "To Member's Page",
+    "new-message": "New Message"
   },
-  "gbstories": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
+  "gbstories": "Givat-Brenner Stories",
   "stories": {
-    "stories": "ספורים",
-    "place-stories": "ספורי המקום",
-    "zoom": "לקריאה בחלון גדול",
-    "edit": "לעריכת הסיפור",
-    "enter-story-name": "תן כותרת לסיפור",
-    "enter-story-source": "מקור הסיפור",
-    "cancel": "בטל",
-    "filter": "חפוש מהיר בשמות הספורים והמחברים",
-    "save": "שמור",
-    "to-the-full-story": "לסיפור המלא",
-    "associated-members": "חברים הקשורים לסיפור",
-    "word-index": "חפש מילים בתוכן הספורים",
-    "languages": "בחר שפה",
-    "arabic": "ערבית",
-    "german": "גרמנית",
-    "greek": "יוונית",
-    "english": "אנגלית",
-    "spanish": "ספרדית",
-    "hungarian": "הונגרית",
-    "italian": "איטלקית",
-    "hebrew": "עברית",
-    "dutch": "הולנדית",
-    "romanian": "רומנית",
-    "russian": "רוסית",
-    "UNKNOWN": "לא מזוהה",
-    "new": "הוסף סיפור חדש",
-    "new-story-content": "סיפור חדש",
-    "new-story": "ללא כותרת",
-    "matching-stories": "ספורים כוללים את המילים שנבחרו",
-    "no-story": "לתמונה זו לא נמצא ספור",
-    "life-stories": "ספורי חיים",
-    "events": "ארועים",
-    "photos": "תמונות",
-    "terms": "מונחים",
-    "all-types": "כל סוגי הספורים",
-    "story-types": "סוג הספורים",
-    "apply-to-selected": "תייג את הספורים שנבחרו",
-    "checking": "סימון הסיפור",
+    "stories": "Stories",
+    "place-stories": "Place Stories",
+    "zoom": "To read in a large window",
+    "edit": "To edit the story",
+    "enter-story-name": "Story's title",
+    "enter-story-source": "Story's source",
+    "cancel": "Cancel",
+    "filter": "Fast search in titles and author names",
+    "save": "Save",
+    "to-the-full-story": "To the full story",
+    "associated-members": "Members associated with the story",
+    "word-index": "Search words appearing in the stories",
+    "languages": "Select Language",
+    "arabic": "Arabic",
+    "german": "German",
+    "greek": "Greek",
+    "english": "English",
+    "spanish": "Spanish",
+    "hungarian": "Hungarian",
+    "italian": "Italian",
+    "hebrew": "Hebrew",
+    "dutch": "Dutch",
+    "romanian": "Rumanian",
+    "russian": "Russian",
+    "UNKNOWN": "UNKNOWN",
+    "new": "Add a new story",
+    "new-story-content": "New Story",
+    "new-story": "Untitled",
+    "matching-stories": "Stories that contain the selected words",
+    "no-story": "No story for this photo yet",
+    "life-stories": "Life Stories",
+    "events": "Events",
+    "photos": "Photos",
+    "terms": "Terms",
+    "all-types": "All story types",
+    "story-types": "Stories Type",
+    "apply-to-selected": "Tag the selected stories",
+    "checking": "Marking the story",
     "older-links": "קישורים לאתר הישן",
-    "undelete": "שחזור ספורים שנמחקו",
-    "to-the-member-page": "לדף החבר",
-    "to-the-photo-page": "לדף התמונה",
-    "term-page": "מתוך מילון המונחים",
-    "categories": "בחירת קטגוריות",
-    "words": "חיפוש לפי מילים",
-    "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
-    "uploaded-today": "ספורים שהועלו היום",
-    "uploaded-this-week": "ספורים שהועלו השבוע",
-    "uploaded-this-month": "ספורים שהועלו החודש",
-    "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
-    "uploaded-this-year": "ספורים שהועלו השנה",
-    "update-associated-members": "עדכן חברים",
-    "update-associated-photos": "עדכן תמונות",
-    "consolidate-selected-story": "מזג לסיפור אחד",
-    "highlight-on": "הפעל/הפסק הדגשת מילות החיפוש",
-    "clean": "נקה"
+    "undelete": "Recover deleted stories",
+    "to-the-member-page": "To the member's page",
+    "to-the-photo-page": "To the photo page",
+    "term-page": "From the terms dictionary",
+    "categories": "Categories selection",
+    "words": "Search by words",
+    "uploaded-any-time": "Stories uploaded any time",
+    "uploaded-today": "Stories uploaded today",
+    "uploaded-this-week": "Stories uploaded this week",
+    "uploaded-this-month": "Stories uploaded this month",
+    "uploaded-this-quarter": "Stories uploaded this quarter",
+    "uploaded-this-year": "Stories uploaded this year",
+    "update-associated-members": "Update associated members",
+    "update-associated-photos": "Update associated photos",
+    "consolidate-selected-story": "Merge into one story",
+    "highlight-on": "Highlighting search words on/off",
+    "clean": "Clean"
   },
   "members": {
     "members": "Members",
-    "new": "הוסף חבר",
-    "filter": "הקלד שם פרטי, שם משפחה או כינוי",
-    "clear": "נקה",
-    "family-connections": "קשרי משפחה",
-    "life-summary": " קיצור תולדות החיים של",
-    "editing-member": "עריכת פרטי החבר",
-    "first-name": "שם פרטי",
-    "last-name": "שם משפחה",
-    "former-first-name": "שם פרטי קודם",
-    "former-last-name": "שם משפחה קודם",
-    "former-name": "שם קודם",
-    "nick-name": "כינוי",
-    "member-name": "שם החבר",
-    "date-of-birth": "תאריך לידה",
-    "date-of-death": "תאריך פטירה",
-    "birth-place": "מקום לידה",
-    "save": "שמור",
-    "cancel": "בטל את השינויים",
-    "gender": "מין",
-    "delete-member": "הסר מרשימת החברים",
-    "confirm-delete": "בטוח שרוצה למחוק את החבר?",
-    "father": "אבא",
-    "mother": "אמא",
-    "make-profile-photo": "קבע כתמונת הפרופיל",
-    "new-member": "חבר חדש",
-    "more-stories": "ספורים קשורים",
-    "set-as-profile-photo": "קבע כתמונת פרופיל",
-    "visibility": "נִרְאוּת",
-    "strange-bug": "בג מוזר",
-    "random-order": "ללא סדר מיוחד",
-    "by-last-name": "לפי שם המשפחה",
-    "by-first-name": "לפי השם הפרטי",
-    "by-age-young-first":  "צעירים תחילה",
-    "by-age-old-first": "מבוגרים תחילה",
-    "member-groups": "קבוצות חברים",
-    "save-member-group": "שמור קבוצת חברים",
-    "load-member-group": "טען קבוצת חברים",
-    "clear-member-group": "נקה את הקבוצה שנבחרה",
-    "story": "בחירת חברים הקשורים לסיפור",
-    "back-to-story": "חזרה לדף הספור",
-    "to-story-page": "לדף הספור",
-    "family-only": "קשרי משפחה",
-    "all-members": "כל החברים"
+    "new": "Add Member",
+    "filter": "Enter first or last name or nick name",
+    "clear": "Clear",
+    "family-connections": "Family Connections",
+    "life-summary": "Life summary of ",
+    "editing-member": "Edit member details",
+    "first-name": "First name",
+    "last-name": "Last name",
+    "former-first-name": "Former first name",
+    "former-last-name": "Former last name",
+    "former-name": "Former name",
+    "nick-name": "Nick name",
+    "member-name": "Member's name",
+    "date-of-birth": "Date of birth",
+    "date-of-death": "Date of death",
+    "birth-place": "Birth place",
+    "save": "Save",
+    "cancel": "Cancel",
+    "gender": "Gender",
+    "delete-member": "Delete member",
+    "confirm-delete": "Are you sure you want to delete member?",
+    "father": "Father",
+    "mother": "Mother",
+    "make-profile-photo": "Set as profile photo",
+    "new-member": "New member",
+    "more-stories": "Associated stories",
+    "set-as-profile-photo": "Set as profile photo",
+    "visibility": "Visibility",
+    "strange-bug": "Strange bug",
+    "random-order": "Unordered",
+    "by-last-name": "By last name",
+    "by-first-name": "By first name",
+    "by-age-young-first":  "Younger first",
+    "by-age-old-first": "Older first",
+    "member-groups": "Member groups",
+    "save-member-group": "Save members group",
+    "load-member-group": "Load members group",
+    "clear-member-group": "Clear member selections",
+    "story": "Selet members associated with the story",
+    "back-to-story": "Back to the story page",
+    "to-story-page": "To the story page",
+    "family-only": "Family connections",
+    "all-members": "All members"
   },
   "user": {
-    "login": "התחבר",
-    "logout": "התנתק",
-    "please-login": "התחבר בבקשה",
-    "email-address": "כתובת דואר אלקטרוני",
-    "password": "סיסמה",
-    "register": "הרשם",
-    "reset-password": "שכחתי את הסיסמה",
-    "confirm-password": "אישור סיסמה",
-    "first-name": "שם פרטי",
-    "last-name": "שם משפחה",
-    "manage-users": "ניהול משתמשים",
-    "can-edit": "הכנס למצב עריכה",
-    "no-edit": "חזור לצפייה בלבד",
-    "upload-files": "העלאת תמונות",
-    "cant-send-email": "כתובת דואל לא תקינה",
-    "wrong-password": "טעות בסיסמה",
-    "user-not-registered": "אינך רשום עדיין",
-    "cant-send-mail": "כתובת דואל לא תקינה",
-    "incomplete-registration": "ההרשמה טרם הושלמה",
-    "email-already-exists": "אימייל זה כבר רשום במערכת",
-    "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
-    "register-done": "הבנתי",
-    "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
-    "chat-rooms": "קבוצות דיון",
-    "font-size": "בחרו את גודל האותיות"
+    "login": "Sign in",
+    "logout": "Sign out",
+    "please-login": "Please sign in",
+    "email-address": "Email address",
+    "password": "Password",
+    "register": "Sign on",
+    "reset-password": "I forgot the password",
+    "confirm-password": "Confirm password",
+    "first-name": "First Name",
+    "last-name": "Last Name",
+    "manage-users": "Manage users",
+    "can-edit": "Enter editing mode",
+    "no-edit": "Enter view-only mode",
+    "upload-files": "Photos upload",
+    "cant-send-email": "Illegal email address",
+    "wrong-password": "Wrong password",
+    "user-not-registered": "You are not registered yet",
+    "cant-send-mail": "Can not send email",
+    "incomplete-registration": "Registration was not completed",
+    "email-already-exists": "This email already exists", 
+    "howto-finalize-registration": "To complete registration, check your email. If there is no message from us, check your span folder",
+    "register-done": "Got it",
+    "passwords-dont-match": "Passwords don't match",
+    "chat-rooms": "Chat rooms",
+    "font-size": "Select font size"
   },
   "photos": {
-    "photos": "תמונות",
-    "photographers": "צלמים",
-    "photographer": "הצלם",
-    "photos-store": "מאגר התמונות",
-    "filter": "חפש בכותרות התמונות",
-    "uploaded-any-time": "תמונות שהועלו בזמן כלשהו",
-    "uploaded-today": "תמונות שהועלו היום",
-    "uploaded-this-week": "תמונות שהועלו השבוע",
-    "uploaded-this-month": "תמונות שהועלו החודש",
-    "uploaded-this-quarter": "תמונות שהועלו ברבעון זה",
-    "uploaded-this-year": "תמונות שהועלו השנה",
-    "click-topic": "חפש תג והקלק עליו",
-    "click-photographer": "חפש צלם והקלק עליו",
-    "from-date": "צולם אחרי",
-    "to-date": "צולם לפני",
-    "uploaded-by-me": "הועלו על ידי",
-    "uploaded-by-users": "הועלו על ידי משתמשים",
-    "uploaded-by-anyone": "תמונות ממקור כלשהו",
-    "enter-date": "תאריך או שנה",
-    "upload-in-progress": "...התמונות נשלחות לשרת",
-    "photos-uploaded": " - תמונות שהועלו בהצלחה",
-    "photos-duplicate": " - תמונות שכבר הועלו בעבר",
-    "failed": " - לא נקלטו במערכת",
-    "upload-files": "העלאת תמונות",
-    "select-photos": "בחר תמונות",
-    "save": "שלח",
-    "photos-were-selected": " - תמונות שנבחרו",
-    "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
-    "more": "יותר",
-    "less": "פחות",
-    "save-merges": "שמור את המיזוגים",
-    "apply-to-selected": "תייג את התמונות שנבחרו",
-    "download": "הורדת תמונות",
-    "done-selecting": "סיים את שלב הבחירה",
-    "new-story": "ללא כותרת",
-    "edit-new-story": "כתוב את סיפורה של התמונה",
-    "new-story-content": "לתמונה זו אין עדיין סיפור",
-    "highlight-all": "האר את כל הפרצופים המזוהים",
-    "jump-to-story-page": "עבור לדף התמונה",
-    "dated-or-not": "תמונות מתוארכות ובלתי מתוארכות",
-    "dated": "תמונות מתוארכות בלבד",
-    "undated": "תמונות בלתי מתוארכות בלבד",
-    "drag-me": "גרור אותי ימינה ושמאלה",
-    "unknown": "בלתי ידוע",
-    "upload": "הוסף תמונות"
+    "photos": "Photos",
+    "photographers": "Photographers",
+    "photographer": "Photographer",
+    "photos-store": "Photos store",
+    "filter": "Search photo captions",
+    "uploaded-any-time": "Photos uploaded any time",
+    "uploaded-today": "Photos uploaded today",
+    "uploaded-this-week": "Photos uploaded this week",
+    "uploaded-this-month": "Photos uploaded this month",
+    "uploaded-this-quarter": "Photos uploaded last quarter",
+    "uploaded-this-year": "Photos uploaded this year",
+    "click-topic": "Search tag and click on it",
+    "click-photographer": "Search photographer and click on it",
+    "from-date": "Photo taken after",
+    "to-date": "Photo taken before",
+    "uploaded-by-me": "Uploaded by me",
+    "uploaded-by-users": "Uploaded by users",
+    "uploaded-by-anyone": "Photos from any source",
+    "enter-date": "Date or year",
+    "upload-in-progress": "Upload in progress...",
+    "photos-uploaded": "Successfuly uploaded - ",
+    "photos-duplicate": "Duplicate photos - ",
+    "failed": "Failed - ",
+    "upload-files": "Upload photos",
+    "select-photos": "Select photos",
+    "save": "Save",
+    "photos-were-selected": "Selected photos - ",
+    "sharing": "In addition to upload from your PC, photos may be shared from smartphones, cloud services etc. by sending them to ",
+    "more": "More",
+    "less": "Less",
+    "save-merges": "Save merges",
+    "apply-to-selected": "Apply to selected photos",
+    "download": "Download photos",
+    "done-selecting": "Finish selecting",
+    "new-story": "Untitled",
+    "edit-new-story": "Write the photo's story",
+    "new-story-content": "This photo has no story yet",
+    "highlight-all": "Highlight all identified faces",
+    "jump-to-story-page": "Go to the story page",
+    "dated-or-not": "Dated and undated photos",
+    "dated": "Dated photos only",
+    "undated": "Undated photos only",
+    "drag-me": "Drag me to the right or to the left",
+    "unknown": "Unknown",
+    "upload": "Add photos"
   },
   "videos": {
-    "videos": "סרטונים"
+    "videos": "Video"
   },
   "terms": {
-    "terms": "מונחים",
-    "terms-lexicon": "מילון מונחים",
-    "new": "מונח חדש",
-    "filter": "חפוש מהיר בשמות המונחים"
+    "terms": "Terms",
+    "terms-lexicon": "Terms lexicon",
+    "new": "New term",
+    "filter": "Fast search in term titles"
   },
   "consts": {
-    "vis-never": "לא ניתן לתצוגה!",
-    "vis-not-ready": "לא מוכן עדיין",
-    "vis-visible": "לתצוגה",
-    "vis-high": "גבוהה"
+    "vis-never": "Never display!",
+    "vis-not-ready": "Not ready yet",
+    "vis-visible": "Ready for display",
+    "vis-high": "High visibility"
   },
   "multi-select": {
-    "why-clip": "קבץ את כל התגים שאינם מקובצים",
-    "why-unclip": "פרק מחדש את קבוצת התגים",
-    "new-item-placeholder": "הכנס שם חדש",
-    "new-item-title": "הוספת שם"
+    "why-clip": "Merge all unmerged tags",
+    "why-unclip": "Dismantle tags group",
+    "new-item-placeholder": "Enter new name",
+    "new-item-title": "New name addition"
   },
   "locales": {
     "he": "Hebrew",
     "en": "English"
   },
-  "go-back": "חזור",
-  "parents": "הורים",
-  "siblings": "אחים/אחיות",
-  "wife": "בת זוג",
-  "wifes": "בנות זוג",
-  "husband": "בן זוג",
-  "husbands": "בני זוג",
-  "children": "ילדים",
-  "topics": "נושאים",
-  "copy-to-clipboard": "העתק",
-  "timeline": "ציר הזמן",
-  "select-years-range": "סמן את התקופה הרצויה",
-  "abcde": "אבגדה",
-  "a": "א",
-  "update": "עדכן"
+  "go-back": "Back",
+  "parents": "Parents",
+  "siblings": "Siblings",
+  "wife": "Wife",
+  "wifes": "Wives",
+  "husband": "Husband",
+  "husbands": "Husbands",
+  "children": "Children",
+  "topics": "Topics",
+  "copy-to-clipboard": "Copy to clipboard",
+  "timeline": "Time line",
+  "select-years-range": "Mark years-range",
+  "abcde": "Abcde",
+  "a": "A",
+  "update": "update"
 }
