--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -191,7 +191,8 @@
     "undated": "תמונות בלתי מתוארכות בלבד",
     "drag-me": "גרור אותי ימינה ושמאלה",
     "unknown": "בלתי ידוע",
-    "upload": "הוסף תמונות"
+    "upload": "הוסף תמונות",
+    "photo-date": "תאריך התמונה"
   },
   "videos": {
     "videos": "סרטונים"
