--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -71,7 +71,8 @@
     "update-associated-photos": "עדכן תמונות",
     "consolidate-selected-story": "מזג לסיפור אחד",
     "highlight-on": "הפעל/הפסק הדגשת מילות החיפוש",
-    "clean": "נקה"
+    "clean": "נקה",
+    "promote-selected-stories": "קדם את הספורים שנבחרו"
   },
   "members": {
     "members": "חברים",
