--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -193,7 +193,8 @@
     "drag-me": "גרור אותי ימינה ושמאלה",
     "unknown": "בלתי ידוע",
     "upload": "הוסף תמונות",
-    "photo-date": "תאריך התמונה"
+    "photo-date": "תאריך התמונה",
+    "photos-date": "תאריך התמונות"
   },
   "videos": {
     "videos": "סרטונים"
