--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -92,6 +92,13 @@
     "date-of-birth": "Date of birth",
     "date-of-death": "Date of death",
     "birth-place": "Birth place",
+    "death-place": "Death place",
+    "born-F": "born",
+    "born-M": "born",
+    "died-F": "died",
+    "died-M": "died",
+    "in-date": "in ",
+    "in-place": "in ",
     "save": "Save",
     "cancel": "Cancel",
     "gender": "Gender",
