--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -92,6 +92,13 @@
     "date-of-birth": "תאריך לידה",
     "date-of-death": "תאריך פטירה",
     "birth-place": "מקום לידה",
+    "death-place": "מקום הפטירה",
+    "born-F": "נולדה",
+    "born-M": "נולד",
+    "died-F": "נפטרה",
+    "died-M": "נפטר",
+    "in-place": "ב",
+    "in-date": "ב-",
     "save": "שמור",
     "cancel": "בטל את השינויים",
     "gender": "מין",
