--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -242,5 +242,6 @@
   "select-years-range": "סמן את התקופה הרצויה",
   "abcde": "אבגדה",
   "a": "א",
-  "update": "עדכן"
+  "update": "עדכן",
+  "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום"
 }
